--- a/firebase/28079004.html
+++ b/firebase/28079004.html
@@ -171,6 +171,11 @@ TMIKey = "31/";
 // Humedad Relativa (HR)
 HREnable = true;
 HRKey = "32/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "33/";
+
+
 
 
 
