--- a/firebase/28079011.html
+++ b/firebase/28079011.html
@@ -163,6 +163,9 @@ EBEKey = "54/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "55/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "56/";
 
 getEstationInfo();
 getEstationtemplate();
