--- a/firebase/28079016.html
+++ b/firebase/28079016.html
@@ -161,6 +161,11 @@ O3Key = "61/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "62/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "63/";
+
+
 
 getEstationInfo();
 getEstationtemplate();
