--- a/firebase/28079018.html
+++ b/firebase/28079018.html
@@ -178,7 +178,9 @@ TMPKey = "80/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "81/";
-
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "82/";
 
 getEstationInfo();
 getEstationtemplate();
