--- a/firebase/28079024.html
+++ b/firebase/28079024.html
@@ -204,6 +204,12 @@ HRKey = "102/";
 // Presión Barométrica (PRB)
 PRBEnable = true;
 PRBKey = "103/";
+// Radiación Solar (RS):
+var RSEnable = true;
+var RSKey = "104/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "105/";
 
 getEstationInfo();
 getEstationtemplate();
