--- a/firebase/28079036.html
+++ b/firebase/28079036.html
@@ -163,6 +163,9 @@ NOXKey = "123/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "124/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "125/";
 
 getEstationInfo();
 getEstationtemplate();
