--- a/firebase/28079038.html
+++ b/firebase/28079038.html
@@ -175,6 +175,9 @@ TMPKey = "135/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "136/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "137/";
 
 getEstationInfo();
 getEstationtemplate();
