--- a/firebase/28079039.html
+++ b/firebase/28079039.html
@@ -160,7 +160,9 @@ O3Key = "142/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "143/";
-
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "144/";
 
 getEstationInfo();
 getEstationtemplate();
