--- a/firebase/28079040.html
+++ b/firebase/28079040.html
@@ -159,6 +159,9 @@ NOXKey = "149/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
 TMIKey = "150/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "151/";
 
 getEstationInfo();
 getEstationtemplate();
