--- a/firebase/28079050.html
+++ b/firebase/28079050.html
@@ -145,23 +145,23 @@ NOKey = "169/";
 NO2Enable = true;
 NO2Key = "170/";
 // Partículas en suspensión (<2.5)
-PS25Enable = false; // eliminado el 26/07/2015
-//PS25Key = "171/";
+PS25Enable = true; // reactivado el 27/07/2015
+PS25Key = "171/";
 // Partículas en suspensión (<10)
-PS10Enable = false; // eliminado el 26/07/2015
-//PS10Key = "172/";
+PS10Enable = true; // reactiva el 27/07/2015
+PS10Key = "172/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "171/";
+NOXKey = "173/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "172/";
+TMPKey = "174/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "173/";
+TMIKey = "175/";
 
 getEstationInfo();
 getEstationtemplate();
