--- a/firebase/28079054.html
+++ b/firebase/28079054.html
@@ -140,34 +140,37 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "174/";
+NOKey = "176/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "175/";
+NO2Key = "177/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "176/";
+NOXKey = "178/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "177/";
+O3Key = "179/";
 
 /* ParametrosMetereologicos */
 
 // Radiación Ultravioleta (UV)
 UVEnable = true;
-UVKey = "178/";
+UVKey = "180/";
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "179/";
+VVKey = "181/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "180/";
+DDKey = "182/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "181/";
+TMPKey = "183/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "182/";
+TMIKey = "184/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "185/";
 
 getEstationInfo();
 getEstationtemplate();
