--- a/firebase/28079056.html
+++ b/firebase/28079056.html
@@ -140,37 +140,40 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Carbono (CO)
 COEnable = true;
-COKey = "195/";
+COKey = "197/";
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "196/";
+NOKey = "198/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "197/";
+NO2Key = "199/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "198/";
+NOXKey = "200/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "199/";
+O3Key = "201/";
 
 /* ParametrosMetereologicos */
 
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "200/";
+VVKey = "202/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "201/";
+DDKey = "203/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "202/";
+TMPKey = "204/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "203/";
+TMIKey = "205/";
 // Humedad Relativa (HR)
 HREnable = true;
-HRKey = "204/";
+HRKey = "206/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "207/";
 
 getEstationInfo();
 getEstationtemplate();
