--- a/firebase/28079059.html
+++ b/firebase/28079059.html
@@ -140,40 +140,46 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "219/";
+NOKey = "221/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "220/";
+NO2Key = "222/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "221/";
+NOXKey = "223/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "222/";
+O3Key = "224/";
 
 /* ParametrosMetereologicos */
 
 // Radiación Ultravioleta (UV)
 UVEnable = true;
-UVKey = "223/";
+UVKey = "225/";
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "224/";
+VVKey = "226/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "225/";
+DDKey = "227/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "226/";
+TMPKey = "228/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "227/";
+TMIKey = "229/";
 // Humedad Relativa (HR)
 HREnable = true;
-HRKey = "228/";
+HRKey = "230/";
 // Presión Barométrica (PRB)
 PRBEnable = true;
-PRBKey = "229/";
+PRBKey = "231/";
+// Radiación Solar (RS):
+var RSEnable = true;
+var RSKey = "232/";
+// Precipitación (LL):
+var LLEnable = true;
+var LLKey = "233/";
 
 getEstationInfo();
 getEstationtemplate();
