--- a/firebase/index.html
+++ b/firebase/index.html
@@ -218,6 +218,12 @@ bringData("19/", HRelemento, HRvalor, HRmedidor);
 // Presión Barométrica (PRB): 
 bringData("20/", PRBelemento, PRBvalor, PRBmedidor);
 
+// Radiación Solar (RS):
+bringData("21/", RSelemento, RSvalor, RSmedidor);  
+
+// Precipitación (LL):
+bringData("22/", LLelemento, LLvalor, LLmedidor);  
+
     </script>
     <!-- FIN SCRIPTS  -->
   </body>
