--- a/firebase/sobre.html
+++ b/firebase/sobre.html
@@ -34,7 +34,7 @@
 <!-- 2.1 Contenido Cabecera  -->   
       <div class="page-header">
         <!-- 2.1 Contenido Cabecera  -->  
-        <h1>Sobre Aire Madrid<small>versión pre-Beta</small></h1>
+        <h1>Sobre Aire Madrid<small>  versión 1.0.0</small></h1>
         <p>Este proyecto es una extensión de un post que publique hace unos meses en 
         <a href="http://www.blog.ulisesgascon.com/" target="_blank">mi blog</a> sobre la <a href="http://www.blog.ulisesgascon.com/la-iniciativa-del-open-data/" target="_blank">posibilidad de utilizar datos abiertos</a> 
          facilitados por parte de las diversas instituciones en España.</p>
@@ -75,6 +75,42 @@
               <p>Todo este proyecto está <a href="https://github.com/UlisesGascon/Aire-Madrid" target="_blank">alojado en Github</a> de manera abierta bajo <a href="https://github.com/UlisesGascon/Aire-Madrid/blob/master/LICENSE" target="_blank">una licencia Apache</a>. 
               Este proyecto está abierto a colaboración y mejora por parte de cualquier persona interesada. 
               No dudes en ponerte en contacto conmigo a través del <a href="https://github.com/UlisesGascon/Aire-Madrid" target="_blank">repositorio en Github</a> o mi <a href="https://twitter.com/kom_256" target="_blank">cuenta de Twitter</a>.</p>
+          </div>
+      </div>   
+      <div class="row">          
+          <div class="col-lg-12">
+              <h3>Hosting:</h3>
+              <img src="img/server.png" class="img-responsive"></img>
+              <p>Todo el backend se ejecuta (descargar, enriquecimiento y subida de datos a Firebase) desde <a href="https://twitter.com/kom_256/status/625895707845771264" target="_blank">una Raspberry Pi dentro de un grifo de Murphy's</a></p>
+          </div>
+      </div>
+      <div class="row">          
+          <div class="col-lg-12">
+              <h3>Versiones:</h3>
+              <p><b>Versión 1.0.0</b></p>
+              <p>Correciones:</p>
+              <p>- Función para archivar los datos del día</p>
+              <p>- Función para eliminar todos los datos de Firebase el primer lunes de cada mes a la 9:47</p>
+              <p>Añadidos:</p>
+              <p>(Gracias a la actualización por parte del ayundatamiento de la documentación adjunta a los datos)</p>
+              <p>- Radiación Solar y Precipitación añadidos a la Media de la Red.</p>
+              <p>- Precipitación añadida a Plaza España.</p>
+              <p>- Precipitación añadida a Ramón y Cajal.</p>
+              <p>- Precipitación añadida a Arturo Soria.</p>
+              <p>- Precipitación añadida a Farolillo.</p>
+              <p>- Radiación Solar y Precipitación añadidos a la Casa de Campo.</p>
+              <p>- Precipitación añadida a Moratalaz.</p>
+              <p>- Precipitación añadida a Cuatro Caminos.</p>
+              <p>- Precipitación añadida a Barrio del Pilar.</p>
+              <p>- Precipitación añadida a Vallecas.</p>
+              <p>- Precipitación añadida a Ensanche de Vallecas.</p>
+              <p>- Precipitación añadida a Plaza Fernández Ladreda.</p>
+              <p>- Radiación Solar y Precipitación añadidos al Parque Juan Carlos I.</p>
+          </div>
+          <div class="col-lg-12">
+              <h3>Versiones:</h3>
+              <p><b>Versión Beta</b></p>
+              <p>Migración del Servidor a <a href="https://twitter.com/kom_256/status/625895707845771264" target="_blank">una Raspberry Pi dentro de un grifo de Murphy's</a></p>
           </div>
       </div>    
       <div id="customEstaciones" class="row"></div>
